--- a/front-end/css/style.css
+++ b/front-end/css/style.css
@@ -4,3 +4,46 @@ table, th, tr
     border: 1px solid black;
     border-collapse: collapse;
 }
+
+table
+{
+    margin-left: auto;
+    margin-right: auto;
+}
+
+#bold_items
+{
+    font-weight: bold;
+}
+
+#logo_pic
+{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 10%;
+}
+
+#navigation_wrapper 
+{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: auto;
+    width: 60%;
+}
+
+button
+{
+    margin-left: 2%;
+    margin-right: 2%;
+    font-size: 2em;
+    padding: 1%;
+    width: 96%;
+}
+
+h1
+{
+    margin: auto;
+    text-align: center;
+}
