--- a/app/css/style.css
+++ b/app/css/style.css
@@ -21,7 +21,9 @@ table
     display: block;
     margin-left: auto;
     margin-right: auto;
-    padding: 10%;
+    padding: 5%;
+    width: 80%;
+    
 }
 
 #navigation_wrapper 
